# TimberStrike

./: .dockerignore  .gitignore  ARTIFACT-EVALUATION.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml  read_defense_results.py  read_no_defense_result.py  read_result.py  run_all.sh  run_baseline.sh  run_clients.sh  run_defense.sh  run_diabetes.sh  run_stroke.sh  run_stroke_all_depths_clients.sh
config_yaml/diabetes/: experiments_config_3.yaml  experiments_config_dp.yaml  experiments_config_feat_imp.yaml  experiments_config_feat_imp_dp.yaml
config_yaml/stroke/: experiments_config.yaml  experiments_config_10.yaml  experiments_config_20.yaml  experiments_config_3.yaml  experiments_config_30.yaml  experiments_config_5.yaml  experiments_config_feat_imp.yaml
dataset_partitioner/: README.md  data_generator.py  data_loader.py  data_partitioner.py  dataset_utils.py  healthcare-dataset-stroke-data_new.csv  healthcare-dataset-stroke-prep-test.csv  healthcare-dataset-stroke-prep-train.csv  healthcare-dataset-stroke-prep.csv  stroke_data_prepr.ipynb
dataset_partitioner/diabetes/: diabetes_data_prepr.ipynb
experiments/: bagging_attack.py  cyclic_attack.py  experiments.py  fedtree_attack.py  fedxgbllr_attack.py  histogram_based_experiments.py  histogram_based_utils.py  nvflare_attack.py  params.py  tree_based_experiments.py  tree_based_utils.py  utils.py
paper_visualization/: plots.ipynb
utils/: .gitignore  README.md
xgboost_reconstruction/: __init__.py  evaluation.py  reconstruct.py  run_attack.py  run_experiment.py  tree_structures.py  xgboost_utils.py
(+330 files in other folders)
