[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "TimberStrike"
version = "0.1.0"
description = "TimberStrike"
packages = [
    { include = "xgboost_reconstruction", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.21.0"
pandas = "^1.3.0"
flwr = { extras = ["simulation"], version = "1.5.0" }
flwr-datasets = ">=0.1.0,<1.0.0"
xgboost = "2.1.0"
aiosignal = ">=1.3.1"
python-dotenv = "1.0.1"
pulp = ">=2.8.0"
scikit-learn = "1.5.2"
matplotlib = ">=3.9.0"
pydotplus = ">=2.0.2"
jupyter = "^1.0.0"
gurobipy = ">=11.0.2"
diffprivlib = ">=0.6.5"
# for fedxgbllr
hydra-core = "1.3.2" # don't change this
torch = "2.5.1"
torchmetrics = "1.1.2"
tqdm = "4.66.3"
torchvision = "0.20.1"
tensorflow = "2.18.0"
tensorflow-estimator = "2.15.0"
tensorflow-io-gcs-filesystem = "0.37.1"
notebook = "^7.3.2"
